// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsPreferences display 3 default preferences - COP, DTHP, L/W 1`] = `
<DocumentFragment>
  <ol
    class="preferences-list"
  >
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        1
        <sup>
          st
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Certificate of Preference (COP)
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 6 units available
      </div>
      <div
        class="preferences-list__description "
      >
        For households in which at least one member holds a Certificate of Preference from the former San Francisco Redevelopment Agency. COP holders were displaced by Agency action generally during the 1960s and 1970s.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Certificate of Preference"
            href="http://sfmohcd.org/certificate-preference"
            target="_blank"
          >
            Read More
          </a>
        </span>
      </div>
    </li>
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        2
        <sup>
          nd
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Displaced Tenant Housing Preference (DTHP)
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 1 unit available
      </div>
      <div
        class="preferences-list__description "
      >
        For households in which at least one member holds a Displaced Tenant Housing Preference Certificate. DTHP Certificate holders are tenants who were evicted through either an Ellis Act Eviction or an Owner Move In Eviction, have been displaced by a fire, or who will experience an unaffordable rent increase due to affordability restrictions expiring. Once all units reserved for this preference are filled, remaining DTHP holders will receive Live/Work preference, regardless of their current residence or work location.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Displaced Tenant Housing Preference"
            href="http://sfmohcd.org/displaced-tenant-housing-preference"
            target="_blank"
          >
            Read More
          </a>
        </span>
      </div>
    </li>
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        3
        <sup>
          rd
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Live or Work in San Francisco Preference
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 6 units available
      </div>
      <div
        class="preferences-list__description translate"
      >
        This is a custom description - For households in which at least one member lives or works in San Francisco.  Requires submission of proof.  Please note in order to claim Work Preference, the applicant currently work in San Francisco at least 75% of their working hours.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Live or Work in San Francisco Preference"
            href="http://sfmohcd.org/housing-preference-programs"
            target="_blank"
          >
            Read More
          </a>
        </span>
        <span>
          <a
            aria-label="View document checklist for the Live or Work in San Francisco Preference"
            href="/document-checklist#live-or-work-sf"
            target="_blank"
          >
            View Document Checklist
          </a>
        </span>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`ListingDetailsPreferences display 6 preferences 1`] = `
<DocumentFragment>
  <ol
    class="preferences-list"
  >
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        1
        <sup>
          st
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Certificate of Preference (COP)
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 1 unit available
      </div>
      <div
        class="preferences-list__description "
      >
        For households in which at least one member holds a Certificate of Preference from the former San Francisco Redevelopment Agency. COP holders were displaced by Agency action generally during the 1960s and 1970s.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Certificate of Preference"
            href="http://sfmohcd.org/certificate-preference"
            target="_blank"
          >
            Read More
          </a>
        </span>
      </div>
    </li>
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        2
        <sup>
          nd
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Rent Burdened / Assisted Housing Preference
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 2 units available
      </div>
      <div
        class="preferences-list__description "
      >
        For households who are currently paying more than 50% of income for housing costs or are living in public housing or project based Section 8 housing within San Francisco.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Rent Burdened / Assisted Housing Preference"
            href="http://sfmohcd.org/housing-preference-programs"
            target="_blank"
          >
            Read More
          </a>
        </span>
        <span>
          <a
            aria-label="View document checklist for the Rent Burdened / Assisted Housing Preference"
            href="/document-checklist#rent-burdened-assisted-housing"
            target="_blank"
          >
            View Document Checklist
          </a>
        </span>
      </div>
    </li>
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        3
        <sup>
          rd
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Displaced Tenant Housing Preference (DTHP)
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 3 units available
      </div>
      <div
        class="preferences-list__description "
      >
        For households in which at least one member holds a Displaced Tenant Housing Preference Certificate. DTHP Certificate holders are tenants who were evicted through either an Ellis Act Eviction or an Owner Move In Eviction, have been displaced by a fire, or who will experience an unaffordable rent increase due to affordability restrictions expiring. Once all units reserved for this preference are filled, remaining DTHP holders will receive Live/Work preference, regardless of their current residence or work location.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Displaced Tenant Housing Preference"
            href="http://sfmohcd.org/displaced-tenant-housing-preference"
            target="_blank"
          >
            Read More
          </a>
        </span>
      </div>
    </li>
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        4
        <sup>
          th
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Neighborhood Resident Housing Preference (NRHP)
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 4 units available
      </div>
      <div
        class="preferences-list__description "
      >
        For households in which at least one member either lives within the Supervisor district of the project or within a half-mile of the project. Requires submission of proof of address.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Neighborhood Resident Housing Preference"
            href="http://sfmohcd.org/neighborhood-resident-housing-preference"
            target="_blank"
          >
            Read More
          </a>
        </span>
        <span>
          <a
            aria-label="View document checklist for the Neighborhood Resident Housing Preference"
            href="/document-checklist#nrhp"
            target="_blank"
          >
            View Document Checklist
          </a>
        </span>
      </div>
    </li>
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        5
        <sup>
          th
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Live or Work in San Francisco Preference
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 5 units available
      </div>
      <div
        class="preferences-list__description "
      >
        For households in which at least one member lives or works in San Francisco. Requires submission of proof. Please note in order to claim Work Preference, the applicant must currently work in San Francisco at least 75% of their working hours.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Live or Work in San Francisco Preference"
            href="http://sfmohcd.org/housing-preference-programs"
            target="_blank"
          >
            Read More
          </a>
        </span>
        <span>
          <a
            aria-label="View document checklist for the Live or Work in San Francisco Preference"
            href="/document-checklist#live-or-work-sf"
            target="_blank"
          >
            View Document Checklist
          </a>
        </span>
      </div>
    </li>
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        6
        <sup>
          th
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Alice Griffith Housing Development Resident
      </h4>
      <div
        class="preferences-list__description "
      >
        Right to Return - Alice Griffith. For households in which at least one member is a former or current resident of Alice Griffith public housing. Please note, these units are not subsidized — the rent will not change if your income changes.
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="View document checklist for the Alice Griffith Housing Development Resident"
            href="/document-checklist#hope-sf"
            target="_blank"
          >
            View Document Checklist
          </a>
        </span>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`ListingDetailsPreferences displays right to return preference 1`] = `
<DocumentFragment>
  <ol
    class="preferences-list"
  >
    <li
      class="preferences-list__item info-card"
    >
      <div
        class="preferences-list__number"
      >
        1
        <sup>
          st
        </sup>
      </div>
      <h4
        class="info-card__title"
      >
        Right to Return - Sunnydale
      </h4>
      <div
        class="preferences-list__subtitle"
      >
        Up to 6 units available
      </div>
      <div
        class="preferences-list__description translate"
      >
        Test Custom Description
      </div>
      <div
        class="preferences-list__links"
      >
        <span>
          <a
            aria-label="Read more about the Sunnydale Right to Return Preference"
            href="https://www.sf.gov/certain-buildings-have-special-lottery-preferences"
            target="_blank"
          >
            Read More
          </a>
        </span>
        <span>
          <a
            aria-label="View document checklist for the Sunnydale Right to Return Preference"
            href="/document-checklist#undefined"
            target="_blank"
          >
            View Document Checklist
          </a>
        </span>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`ListingDetailsPreferences displays spinner when no preferences 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center"
  >
    <span
      class="ui-icon ui-large spinner-animation"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="32"
          stroke="currentColor"
          stroke-dasharray="150.79644737231007 52.26548245743669"
          stroke-width="9"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
